feat: Добавить логику генерации слотов в АПИ
